// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostPopular renders correctly 1`] = `
<div
  cardStyle="default"
  className="fd-card fd-most-popular default"
>
  <div
    className="tab-header"
  >
    <h3
      className="tab-most-read active"
      onClick={[Function]}
    >
      Meest gelezen
    </h3>
    <h3
      className="tab-most-comments"
      onClick={[Function]}
    >
      Meeste reacties
    </h3>
  </div>
  <ol
    className=" active"
  >
    <li>
      <a
        className=""
        href="https://fd.nl"
      >
        title van nieuwsbericht
      </a>
    </li>
  </ol>
  <ol
    className=""
  >
    <li>
      <a
        className=""
        href="https://fd.nl"
      >
        title van nieuwsbericht 2
      </a>
    </li>
  </ol>
</div>
`;

exports[`MostPopular renders correctly 2`] = `
<div
  cardStyle="article"
  className="fd-card fd-most-popular article"
>
  <div
    className="tab-header"
  >
    <h3
      className="tab-most-read active"
      onClick={[Function]}
    >
      Meest gelezen tab
    </h3>
    <h3
      className="tab-most-comments"
      onClick={[Function]}
    >
      Meeste comments label
    </h3>
  </div>
  <ol
    className=" active"
  >
    <li>
      <a
        className=""
        href="https://fd.nl"
      >
        title van nieuwsbericht
      </a>
    </li>
  </ol>
  <ol
    className=""
  >
    <li>
      <a
        className=""
        href="https://fd.nl"
      >
        title van nieuwsbericht 2
      </a>
    </li>
  </ol>
</div>
`;

exports[`MostPopular renders is-read correctly and without most comments 1`] = `
<div
  cardStyle="persoonlijk"
  className="fd-card fd-most-popular persoonlijk"
>
  <div
    className="tab-header"
  >
    <h3
      className="tab-most-read active"
      onClick={[Function]}
    >
      Meest gelezen
    </h3>
  </div>
  <ol
    className=" active"
  >
    <li>
      <a
        className="is-read"
        href="https://fd.nl"
      >
        title van nieuwsbericht
      </a>
    </li>
  </ol>
</div>
`;
